--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template-typescript": "1.2.0",
     "firebase": "^11.2.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
