--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4"
