--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
