--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.3",
     "@types/jwt-decode": "^3.1.0",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
